i need chemotherapy after being exposed to this much cancer

--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -375,7 +375,19 @@
  UaCH.78.t: "Timur's Legacy Shattered"
  UaCH.78.d: "The mighty armies of [From.GetName] have ransacked the lands of Iran, and crushed any hope we may have had of placing ourselves on Timur's Throne. With the succession crisis finally over, the lords of [From.GetName] have demanded we prostate ourselves before them, and swear our fealty. Should we refuse, war is sure to come."
  UaCH.78.a: "We must accept this"
- UaCH.78.b: "Let them come!"
+ UaCH.79.b: "Let them come!"
+ UaCH.79.t: "Escape to India"
+ UaCH.79.d: "While our catastrophic defeat in the Timurid Succession Crisis has forced us to abandon our claims in Iran, all is not yet lost. Taking the long and arduous route east through Afghanistan, we have been able to rebuild a new army through local recruits, and capture a foothold in India. With the Delhi Sultanate weakened in the north, the time has come for us to capture these fertile river plains. Iran may be lost, but India beckons."\
+ UaCH.79.a: "Onwards, to Delhi!"
+ UaCH.81.t: "No Longer a mere Governor"
+ UaCH.81.d: "After our great victory, we are no longer a mere Timurid Governor, and can pick our path forward towards greatness."
+ UaCH.81.a: "Make sure you have the Timurid Succession Special Mechanics GUI closed!"
+ UaCH.81.t: "No Longer a Timurid Governor"
+ UaCH.81.d: "As we have fled the Timurid Realm, we are no longer a Timurid Governor."
+ UaCH.81.a: "Make sure you have the Timurid Succession Special Mechanics GUI closed!"
+ UaCH.82.t: "No Longer a Timurid Prince"
+ UaCH.82.d: "As we have fled the Timurid Realm, we are a Timurid Prince in name only, and have no real ability to press our claims. It is time we abandoned our pretentions."
+ UaCH.82.a: "Make sure you have the Timurid Succession Special Mechanics GUI closed!"
  
  uach_escalation_governor_lvl1:0"Increased tension"
  uach_escalation_prince_lvl1:0"Increased tension"
