if only there was a war 4. wait,,,,,,

--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -443,4 +443,21 @@
  uach_escalation_reward_lvl4: "Calamity averted"
  uach_escalation_reward_lvl5: "Let the world burn"
  uach_escalation_reward_lvl6: "Ashes of war"
- UACH_GOV_REFORM_COOLDOWN: "The special government ability is on cooldown right now, and it" 
+ UACH_GOV_REFORM_COOLDOWN: "The special government ability is on cooldown right now, and it"
+
+ UaCH.85.t: "Intervene in the Timurid Succession Crisis"
+ UaCH.85.d: "This is the greatest moment of Timurid Weakness, and an ideal time for us to exploit the situation for our own gains. Do we wish to go forward with this and involve ourselves in the Timurid Civil War as an §GInterloper?§!\n\n§GInterlopers§! are external participants in the Timurid Succession Crisis. As an §GInterloper§!, you declare war for a particular region of the Timurid State, matching the borders in the Special Mechanics map in the UI. This will bring you to war with several, but not all, participants in the Timurid Succession Crisis. The only path to victory is to occupy every single province you have declared war for. Any peace deal during the war will result in the immediate breakout of hostilties once again. If you lose any war during this period, you lose them all: you back out and abandon your claims.\n\nWhat region will you declare your intervention for, and become an §GInterloper§! in?"
+ UaCH.85.a: "Back"
+ UaCH.85.c: "Back"
+ UaCH.85.b1: "The Mountains of §GIraq-e Ajam§!"
+ UaCH.85.b2: "The Cultural Heartland in §GFars§!"
+ UaCH.85.b3: "The Frontiers of §GKhorasan§!"
+ UaCH.85.b4: "Shah Rukh's Capital, §GHerat§!"
+ UaCH.85.b5: "The Imposing Cliffs of §GAfghanistan§!"
+ UaCH.85.b6: "The Dusty Plains of §GMarw al-Shahijan§!"
+ UaCH.85.b7: "The Pristine §GFergana Valley§!"
+ UaCH.85.b8: "The Northern Cities by §GSamarkand§!"
+ UaCH.86.t: "Successful Intervention!"
+ UaCH.86.d: "Our intervention is successful, and we have captured everything we aim to conquer. We could exit the conflict now, secure in our gains, and return to peace. Or, we could risk it all, and push further..."
+ UaCH.86.a: "Victory! Let the men return home."
+ UaCH.86.b: "Forge onwards to eternal glory!"
