--- a/UaCH/localisation/uach_misc_l_english.yml
+++ b/UaCH/localisation/uach_misc_l_english.yml
@@ -11,7 +11,40 @@
  UACH_EVENT_79_A_TT: "§RWe will have 10 years to conquer as much of Northern India as we can, before the bonuses run out.§!"
  UACH_RTL_TR_TT_PROG: "Every Timurid Prince or Governor is our subject."
  UACH_81_A_TOOLTIP: "§RDue to a paradox bug, please do not click this option while you have the Special Mechanics UI screen open, as it will crash your game§!"
+ ETP_D_TR_A_TT: "The Timurid Succession Crisis must be ongoing."
+ UACH_INTERLOPER_BUTTON_TT: "We will be able to choose the region to intervene in, and assert ourselves as an §GInterloper§!."
+ UACH_86_A_TT: "All provinces that we have intervened for will be ceded to us."
+ UACH_86_B_TT: "Enables the §REnd Timur's Legacy§! Mechanic. We will only conquer the provinces we intervened for after Ending Timur's Legacy. If we lose the war, or the Timurid Realm is Reunited or Destroyed before that, we will §Rnever§! get those provinces."
+ UACH_ETL_GOV_TR_INTBM_TT: "Is an interloper and has chosen to attempt and End Timur's Legacy."
+ itrcdec_TT_0: "Controls all provinces in §GIraq-e Ajam§! that are a part of the Timurid Succession Crisis."
+ itrcdec_TT_1: "Controls all provinces in §GFars§! that are a part of the Timurid Succession Crisis."
+ itrcdec_TT_2: "Controls all provinces in §GKhorasan§! that are a part of the Timurid Succession Crisis."
+ itrcdec_TT_3: "Controls all provinces in §GHerat§! that are a part of the Timurid Succession Crisis."
+ itrcdec_TT_4: "Controls all provinces in §GAfghanistan§! that are a part of the Timurid Succession Crisis."
+ itrcdec_TT_5: "Controls all provinces in §GMarw al-Shahijan§! that are a part of the Timurid Succession Crisis."
+ itrcdec_TT_6: "Controls all provinces in §GFergana Valley§! that are a part of the Timurid Succession Crisis."
+ itrcdec_TT_7: "Controls all provinces in §GSamarkand§! that are a part of the Timurid Succession Crisis."
+ itrcdec_e_TT: "We will choose the fate of our conquest."
 
  # modifiers
  uach_slain_the_crimson_horse: "Slain the Crimson Horse"
  uach_gaining_a_foothold: "Gaining a Foothold"
+ successful_interloper_intervention: "Successful Intervention"
+
+ #decisions
+ interloper_tr_conquest_0_title: "§GInterloper§!'s Conquest of Iraq-e Ajam"
+ interloper_tr_conquest_1_title: "§GInterloper§!'s Conquest of Fars"
+ interloper_tr_conquest_2_title: "§GInterloper§!'s Conquest of Khorasan"
+ interloper_tr_conquest_3_title: "§GInterloper§!'s Conquest of Herat"
+ interloper_tr_conquest_4_title: "§GInterloper§!'s Conquest of Afghanistan"
+ interloper_tr_conquest_5_title: "§GInterloper§!'s Conquest of Marw al-Shahijan"
+ interloper_tr_conquest_6_title: "§GInterloper§!'s Conquest of Fergana Valley"
+ interloper_tr_conquest_7_title: "§GInterloper§!'s Conquest of Samarkand"
+ interloper_tr_conquest_0_desc: "We have embroiled ourselves in the Timurid Succession Crisis, in order to capture land for ourselves. It is imperative that we focus on this conquest, to ensure no Timurid Prince can oppose our ambitions."
+ interloper_tr_conquest_1_desc: "We have embroiled ourselves in the Timurid Succession Crisis, in order to capture land for ourselves. It is imperative that we focus on this conquest, to ensure no Timurid Prince can oppose our ambitions."
+ interloper_tr_conquest_2_desc: "We have embroiled ourselves in the Timurid Succession Crisis, in order to capture land for ourselves. It is imperative that we focus on this conquest, to ensure no Timurid Prince can oppose our ambitions."
+ interloper_tr_conquest_3_desc: "We have embroiled ourselves in the Timurid Succession Crisis, in order to capture land for ourselves. It is imperative that we focus on this conquest, to ensure no Timurid Prince can oppose our ambitions."
+ interloper_tr_conquest_4_desc: "We have embroiled ourselves in the Timurid Succession Crisis, in order to capture land for ourselves. It is imperative that we focus on this conquest, to ensure no Timurid Prince can oppose our ambitions."
+ interloper_tr_conquest_5_desc: "We have embroiled ourselves in the Timurid Succession Crisis, in order to capture land for ourselves. It is imperative that we focus on this conquest, to ensure no Timurid Prince can oppose our ambitions."
+ interloper_tr_conquest_6_desc: "We have embroiled ourselves in the Timurid Succession Crisis, in order to capture land for ourselves. It is imperative that we focus on this conquest, to ensure no Timurid Prince can oppose our ambitions."
+ interloper_tr_conquest_7_desc: "We have embroiled ourselves in the Timurid Succession Crisis, in order to capture land for ourselves. It is imperative that we focus on this conquest, to ensure no Timurid Prince can oppose our ambitions."
