using one of those aerosol bug poison spray cans

--- a/UaCH/localisation/uach_misc_l_english.yml
+++ b/UaCH/localisation/uach_misc_l_english.yml
@@ -25,6 +25,7 @@
  itrcdec_TT_6: "Controls all provinces in §GFergana Valley§! that are a part of the Timurid Succession Crisis."
  itrcdec_TT_7: "Controls all provinces in §GSamarkand§! that are a part of the Timurid Succession Crisis."
  itrcdec_e_TT: "We will choose the fate of our conquest."
+ UACH_REPLACE_TIMURID_NATION_TT: "We will place a Timurid Prince on the throne, and elevate our status accordingly!"
 
  # modifiers
  uach_slain_the_crimson_horse: "Slain the Crimson Horse"
