Coming in for a rough landing!

--- a/UaCH/localisation/UaCH_events_l_english.yml
+++ b/UaCH/localisation/UaCH_events_l_english.yml
@@ -235,9 +235,13 @@
  UaCH.43.t: "Tragedy on the Battlefield"
  UaCH.43.d: "What we were afraid of has happened! Our ruler, [Root.Monarch.GetTitle] §G[Root.Monarch.GetName]§! has fallen on the battlefield to foreign arms, and while our troops have managed to recover his body the following chaos forced their retreat. The unexpected demise of our ruler has left us with no clear succession, as he has not designated a heir."
  UaCH.43.a: "Don't you traitors get any ideas!"
+ uach_all_subjects_join_succession_crisis:0 "All of our subjects will become independent and join the §YTimurid Succession Crisis§!."
+ uach_all_opms:0 "All possible releasables will gain independence and join the §YTimurid Succession Crisis§!."
  UaCH.43.b: "A bastard is still a heir!"
+ uach_half_opms: "Up to half of our territory will gain independence and join the §YTimurid Succession Crisis§!."
  UaCH.43.c: "He's clearly fit to rule!"
- UaCH.43.d: "At least we have a new [Root.Monarch.GetTitle] to take charge..."
+ uach_tenth_opms:0 "Up to a tenth of our territory will gain independence and join the §YTimurid Succession Crisis§!."
+ UaCH.43.safe: "At least we have a new [Root.Monarch.GetTitle] to take charge..."
  
  UaCH.44.t: "General turned traitor"
  UaCH.44.d: "In the midst of the succession crisis, many lowborn are forced to serve in either the armies or turn mercenary. While war is an inherently deathly occupation, some find opportunities to rise in the ranks, either by valor or by betrayal. One of our appointed viziers got definitely strange ideas into his head, proclaiming himself Emir, with the support of a fair part of our army. He began to fortify the nearby villages and send out tax collectors to set up his nice little kingdom."
