--- a/UaCH/localisation/uach_misc_l_english.yml
+++ b/UaCH/localisation/uach_misc_l_english.yml
@@ -6,8 +6,8 @@
  UACH_ETL_GOV_TR_TT: "Every Timurid Prince is our subject or has their capital directly controlled by us"
  UACH_INTERLOPER_CONQUEST_TR_TT: "Controls every province in the Thematic Region we declared for, that is owned by either a Prince or a Governor"
  UACH_RTL_EFFECT_TT: "We will restore the Timurid State! Our Emirates with only a single province will be integrated, but our other Emirates will remain subjects."
- UACH_ETL_EFFECT_TOOLTIP: "We will destroy all memory of the Timurid State. If we are an interloper, we will gain every province we declared Interloper's Conquest for. We will demand that all remaining Timurid countries become our vassal: if they refuse, we will gain a subjugation Casus Belli on them."
- UACH_ESCAPE_TO_INDIA_TR_TT: "A province must be available for us to escape to"
+ UACH_ETL_EFFECT_TOOLTIP: "We will destroy all memory of the Timurid State. If we are an interloper, we will gain every province we declared Interloper's Conquest for. We will demand that all remaining Timurid countries become our vassal: if they refuse, we will gain a Subjugation Casus Belli on them."
+ UACH_ESCAPE_TO_INDIA_TR_TT: "A province must be available for us to escape to."
  UACH_EVENT_79_A_TT: "§RWe will have 10 years to conquer as much of Northern India as we can, before the bonuses run out.§!"
  UACH_RTL_TR_TT_PROG: "Every Timurid Prince or Governor is our subject."
  UACH_81_A_TOOLTIP: "§RDue to a paradox bug, please do not click this option while you have the Special Mechanics UI screen open, as it will crash your game§!"
