disaster + fixes + nice things

--- a/UaCH/localisation/uach_gov_l_english.yml
+++ b/UaCH/localisation/uach_gov_l_english.yml
@@ -32,3 +32,9 @@
  uach_scrap_a_reform: "Scrap a Reform"
  uach_scrap_a_reform_desc: "We can scrap a reform or two to mollify our subjects, but this will hurt our progress towards reforming the state."
  UACH_P2FM_R_TT: "We will integrate all loyal subjects and convert our disloyal ones into vassals."
+ ability_uach_reform_state_mechanic: "Reform the Timurid State"
+ uach_fully_mongolize: "Monglize the State"
+ uach_fully_mongolize_desc: "Timur had a vision for his empire: a new, vast horde, modeled on the Mongol Empire of old; a horde that kept to the old Mongol laws and traditions. A state that cared little for the culture and wealth of Persia, and focused instead of wholesale conquest. As the true heirs of Timur, it is up to us to realize this vision."
+ uach_fully_persianize: "Persianize the State"
+ uach_fully_persianize: "Shah Rukh had a vision for his empire: a civilized, stable, and above all Persian state. He put great focus on administering Persia, on fostering its culture and adopting its traditions into the Timurid state, and on increasing the prosperity of Iran. As the true heirs of Shah Rukh, it is up to us to realize this vision."
+ monthly_uach_persianization: "Monthly Persianization"
